<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_page_logo_up"
            android:layout_width="277dp"
            android:layout_height="164dp"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_helpi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/lightGray"
            app:boxStrokeWidth="0dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_page_logo_up"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/lightGray"
            app:boxStrokeWidth="0dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email_input_layout"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_on_login_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
            app:layout_constraintStart_toStartOf="@+id/password_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#63B8E4"
            android:paddingStart="35dp"
            android:paddingTop="8dp"
            android:paddingEnd="35dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_on_login_msg" />

        <LinearLayout
            android:id="@+id/dont_have_account_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button">

            <TextView
                android:id="@+id/Dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                android:text="@string/dont_have_an_account_yet"
                android:textColor="#A6A6A6"
                android:textSize="16sp" />

            <Button
                android:id="@+id/go_to_reg_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/register"
                android:textColor="#63B8E4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:paddingStart="4dp"
                android:text="@string/now"
                android:textColor="#A6A6A6"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textColor="#A6A6A6"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dont_have_account_layout" />

        <LinearLayout
            android:id="@+id/social_login_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or">

            <ImageView
                android:id="@+id/facebook_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/google_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_google" />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>