<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#A6A6A6"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reg_profile_picture"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/icon_account_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/choose_picture_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#A6A6A6"
            android:padding="10sp"
            android:text="@string/choose_profile_picture"
            android:textColor="#FFFFFF"
            android:textColorLink="#A6A6A6"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_profile_picture" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_input_reg_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/first_name"
            app:boxBackgroundColor="@color/lightGray"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:cornerRadius="16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_picture_button"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="First Name"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPersonName"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_input_reg_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/last_name"
            app:boxBackgroundColor="@color/lightGray"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            app:cornerRadius="16dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_input_reg_wrap"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="First Name"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPersonName"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_reg_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/lightGray"
            app:boxStrokeWidth="0dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_input_reg_wrap"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_input_reg_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/phone"
            app:boxBackgroundColor="@color/lightGray"
            app:boxStrokeWidth="0dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_reg_wrap"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="phone"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_reg_wrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/lightGray"
            app:boxStrokeWidth="0dp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_input_reg_wrap"
            app:layout_constraintWidth_percent="0.8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@drawable/rounded_background"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#63B8E4"
            android:paddingStart="35dp"
            android:paddingTop="8dp"
            android:paddingEnd="35dp"
            android:paddingBottom="10dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_reg_wrap" />


        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or_login_with"
            android:textColor="#A6A6A6"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <LinearLayout
            android:id="@+id/social_login_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or">

            <ImageView
                android:id="@+id/facebook_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/google_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_google" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>