...
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@color/gray" />

                <!-- Logout Section -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/logout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
...
